--- a/public/src/stylesheets/app/_filter.scss
+++ b/public/src/stylesheets/app/_filter.scss
@@ -1,14 +1,27 @@
 .pac-filter-card {
   position: relative;
   background-color: govuk-colour("light-grey");
+  border: 1px solid grey;
   padding: 15px;
   @include govuk-clearfix();
+  margin-bottom: 0;
+
   .govuk-heading-s {
     margin-bottom: 5px;
+
     @media (min-width: 40.0625em) {
       margin-bottom: 10px;
     }
   }
+}
+
+.pac-filter-card-bottom {
+  position: relative;
+  background-color: govuk-colour("white");
+  border: 1px solid grey;
+  border-top: 0;
+  margin-top: 0;
+  padding: 15px;
 }
 
 .pac-filter-container {
@@ -65,11 +78,8 @@
   height: 35px;
   background-color: govuk-colour("white");
   text-decoration: none;
-
-  &--selected {
-    @include govuk-typography-weight-bold;
-  }
 }
+
 
 body.js-enabled {
   .pac-filter-button {
@@ -82,7 +92,8 @@ body.js-enabled {
       transform: rotate(135deg);
       height: 8px;
       width: 8px;
-      top: -2px;
+      top: calc(100% - 19px);
+      float: right;
       margin-left: 10px;
     }
 
@@ -90,7 +101,8 @@ body.js-enabled {
       border-bottom: 0;
 
       &:after {
-        top: 3px;
+        top: calc(100% - 15px);
+        float: right;
         transform: rotate(-45deg);
       }
     }
@@ -103,8 +115,12 @@ body.js-enabled {
   @include govuk-clearfix();
 
   &--container {
-    float: left;
-    margin: 10px 10px 0 0;
+    @include govuk-clearfix();
+    display: flex;
+    flex-direction: column;
+  }
+
+  &--filters {
     @include govuk-clearfix();
   }
 }
@@ -120,13 +136,14 @@ body.js-enabled {
 .pac-apply-filters-button {
   display: inline-block;
   padding: 5px 25px;
-  margin: 10px 0 0 0;
+  margin: 0 0 0 0;
 }
 
 body:not(.js-enabled) {
   .pac-selected-filters {
     display: none !important;
   }
+
   .pac-filter-container {
     float: none;
     position: relative;
