--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -227,6 +227,13 @@
 
     {% from "govuk/components/details/macro.njk" import govukDetails %}
     {%- set detailsText = "<p class=\"govuk-body\">If the defendant is unknown to probation, you must <a href=\"/" + params.courtCode + "/case/" + params.caseId + "/hearing/" + params.hearingId + "/match/defendant/" + params.defendantId + "/nomatch\" class=\"govuk-link govuk-link--no-visited-state\">confirm they have no record</a>.</p><p class=\"govuk-body\">If they have an NDelius record, you can <a href=\"/" + params.courtCode + "/case/" + params.caseId + "/hearing/" + params.hearingId + "/match/defendant/" + params.defendantId + "/manual\" class=\"govuk-link govuk-link--no-visited-state\">link it to them with a case reference number</a>.</p>" -%}
+
+    {% if data.showAllMatches %}
+      {%- set detailsText = detailsText + "<p class=\"govuk-body\">All possible records are showing.</p>" -%}
+    {% else %}
+      {%- set detailsText = detailsText + "<p class=\"govuk-body\"><a href=\"/" + params.courtCode + "/case/" + params.caseId + "/hearing/" + params.hearingId + "/match/defendant/" + params.defendantId + "?showAllMatches=true\" class=\"govuk-link govuk-link--no-visited-state\">Show more matches</a>.</p>" -%}
+    {% endif %}
+
     {{ govukDetails({
       classes: "govuk-!-margin-top-6",
       summaryText: "Can't see the correct record?",
