--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -1,16 +1,10 @@
 {% extends "partials/layout.njk" %}
 
-{% if session.matchType === 'bulk' %}
-  {%- set backUrl = '/' + session.courtCode + '/match/' + session.matchType + '/' + session.matchDate -%}
-{% else %}
-  {%- set backUrl = '/' + params.courtCode + '/hearing/' + data.hearingId + '/defendant/' + data.defendantId + '/summary' -%}
-{% endif %}
-
 {% block backlink %}
   {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
   {{ govukBackLink({
     text: "Back",
-    href: backUrl
+    href: data.backUrl
   }) }}
 {% endblock %}
 
@@ -121,7 +115,7 @@
               {% for item in data.matchData %}
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="defendant-{{ loop.index }}" name="crn"
-                         type="radio" value="{{ item.matchIdentifiers.crn }}">
+                         type="radio" value="{{ item.matchIdentifiers.crn }}"  data-match-probability="{{ item.matchProbability }}">
                   <label class="govuk-label govuk-radios__label govuk-!-padding-top-0"
                          for="defendant-{{ loop.index }}">
 
@@ -135,6 +129,7 @@
                             {{ matchName | apostropheInName | properCase | removeTitle | markMatches(defendantFullName) | safe }}
                           </td>
                         </tr>
+                        <input type="hidden" name="matchProbability" id="matchProbability" value="">
                         {% set aliases = item.matchIdentifiers.aliases %}
 
                         {% if aliases %}
@@ -195,6 +190,10 @@
                         </tbody>
                       </table>
                     </div>
+                    {% block javascripts %}
+                      {{ super() }}
+                      <script type="text/javascript" src="/javascripts/match-probability-{{ appVersion }}.min.js"></script>
+                    {% endblock %}
 
                   </label>
                 </div>
@@ -242,7 +241,7 @@
 
     <button type="submit" class="govuk-button action-button">Confirm record</button>
 
-    <p class="govuk-body"><a href="{{ backUrl }}" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+    <p class="govuk-body"><a href="/{{ session.courtCode }}/match/cancel" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
 
   </form>
 
