--- a/server/views/components/button-group/template.njk
+++ b/server/views/components/button-group/template.njk
@@ -1,5 +1,8 @@
-<div class="govuk-button-group button-group">
-    <button class="govuk-button action-button">{{buttonText}}</button>
+
+{% from "govuk/components/button/macro.njk" import govukButton %}
+
+<div class="govuk-button-group page-button-group">
+    {{govukButton({text: buttonText, type: "submit"})}}
     {% if cancelLink %}
         <a href="{{cancelLink}}" class="govuk-link govuk-link--no-visited-state">Cancel</a>
     {% endif %}
