--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -101,16 +101,16 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-l">Case summary</h1>
+            <h2 class="govuk-heading-l">Case summary</h2>
         </div>
     </div>
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <h2 class="govuk-heading-m">
+            <h3 class="govuk-heading-m">
                 Defendant details
-            </h2>
+            </h3>
 
             <dl class="govuk-summary-list govuk-summary-list--no-border">
                 <div class="govuk-summary-list__row">
@@ -179,15 +179,13 @@
 
             {% if features.hearingOutcomesEnabled %}
                 <section id="section-files" class="govuk-!-margin-bottom-4">
-                    <h2 class="govuk-heading-m govuk-!-margin-top-9">
-                        Case documents
-                    </h2>
+                    <h3 class="govuk-heading-m govuk-!-margin-top-9">Case documents</h3>
                     <p class="govuk-body">Upload documents to attach them to this case.</p>
                     {{ pacFileUploader('summary/files', data.files, config.files) }}
                 </section>
             {% endif %}
 
-            <h2 class="govuk-heading-m">Appearance</h2>
+            <h3 class="govuk-heading-m">Appearance</h3>
             <p class="govuk-body">Court {{ courtRoom | courtRoomDisplay }}, {{ data.session | lower }} session,
                 {{ moment(data.sessionStartTime).format('dddd D MMMM') }}.</p>
 
@@ -197,7 +195,7 @@
                 </p>
             {% endif %}
 
-            <h2 class="govuk-heading-m govuk-!-margin-top-9">Offences</h2>
+            <h3 class="govuk-heading-m govuk-!-margin-top-9">Offences</h3>
 
             {% set offences = [] %}
             {% for offence in data.offences %}
