--- a/server/views/components/key-details-bar/template.njk
+++ b/server/views/components/key-details-bar/template.njk
@@ -7,9 +7,9 @@
 
             <div class="pac-key-details-bar-flex">
                 <div class="pac-key-details-bar-flex__child">
-                    <h2 class="pac-key-details-bar__name govuk-!-margin-right-4">{% if params.accTitle %}<span
-                                class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}
-                    </h2>
+                    <h1 class="pac-key-details-bar__name govuk-!-margin-right-4">{% if params.accTitle %}
+                        <span class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}
+                    </h1>
                 </div>
                 {% if params.crn | length %}
                     <div class="pac-key-details-bar-flex__child">
