⚰️ Google Analytics removal

--- a/server/views/privacy-notice.njk
+++ b/server/views/privacy-notice.njk
@@ -80,11 +80,11 @@
                 </li>
             </ul>
 
-            <p class="govuk-body">We use Google Analytics software to collect information about how you use Prepare a
+            <p class="govuk-body">We use Microsoft Analytics software to collect information about how you use Prepare a
                 case for
                 sentence. This includes IP addresses. The data is anonymised before being used for analytics
                 processing.</p>
-            <p class="govuk-body">Google Analytics processes anonymised information about:
+            <p class="govuk-body">Microsoft Analytics processes anonymised information about:
             </p>
             <ul class="govuk-list govuk-list--bullet">
                 <li>the pages you visit on Prepare a case for sentence
@@ -97,7 +97,7 @@
                 </li>
             </ul>
 
-            <p class="govuk-body">We do not store your personal information through Google Analytics (for example your
+            <p class="govuk-body">We do not store your personal information through Microsoft Analytics (for example your
                 name or
                 address).
             </p>
@@ -112,7 +112,7 @@
 
             <h2 class="govuk-heading-m">Why we need your data</h2>
 
-            <p class="govuk-body">We collect information through Google Analytics to see how you use the service. We do
+            <p class="govuk-body">We collect information through Microsoft Analytics to see how you use the service. We do
                 this to
                 help:
             </p>
@@ -157,8 +157,6 @@
             </p>
 
             <p class="govuk-body">All personal data is stored in the United Kingdom or European Economic Area (EEA).
-                Data
-                collected by Google Analytics may be transferred outside the UK or EEA for processing.
             </p>
 
             <h2 class="govuk-heading-m">How we protect your data and keep it secure
