--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -32,13 +32,42 @@
         {% if analyticsCookies === 'accept' %}
             {% if connectionString %}
                 <script type="text/javascript" src="/assets/applicationinsights-web.min.js"  nonce="{{ nonce }}"></script>
-                <script type="text/javascript" nonce="{{ cspNonce }}">
-                    var snippet = {
-                        config: {
-                            connectionString: "{{ connectionString }}",
-                            autoTrackPageVisitTime: true
+                
+                    {% if clickAnalytics %}
+                        <script type="text/javascript" src="/assets/applicationinsights-clickanalytics-js.min.js"  nonce="{{ nonce }}"></script>
+                        <script type="text/javascript" nonce="{{ nonce }}">
+                        var clickPluginInstance = new Microsoft.ApplicationInsights.ClickAnalyticsPlugin();
+                        // Click Analytics configuration
+                        var clickPluginConfig = {
+                            autoCapture : true,
+                            dataTags: {
+                                useDefaultContentNameOrId: true
+                            }
                         }
-                    }
+                        var snippet = {
+                            config: {
+                                connectionString: "{{ connectionString }}",
+                                extensions: [
+                                    clickPluginInstance
+                                ],
+                                extensionConfig: {
+                                    [clickPluginInstance.identifier] : clickPluginConfig
+                                },
+                                autoTrackPageVisitTime: true
+                            }
+                        }
+                        </script>
+                    {% else %}
+                        <script type="text/javascript" nonce="{{ nonce }}">
+                        var snippet = {
+                            config: {
+                                connectionString: "{{ connectionString }}",
+                                autoTrackPageVisitTime: true
+                            }
+                        }
+                        </script>
+                    {% endif %}
+                    <script type="text/javascript" nonce="{{ nonce }}">
                     var init = new Microsoft.ApplicationInsights.ApplicationInsights(snippet)
                     var appInsights = init.loadAppInsights();
 
@@ -47,7 +76,7 @@
                         envelope.tags["ai.application.ver"] = "{{ appVersion }}"
                     });
                     appInsights.trackPageView();
-                </script>
+                    </script>
             {% endif %}
         {% endif %}
         <script type="text/javascript" src="/javascripts/button-{{ appVersion }}.min.js"></script>
