PIC-3154 Remove half width class from notes column on the risk assessment tables

--- a/server/views/case-summary-risk.njk
+++ b/server/views/case-summary-risk.njk
@@ -50,7 +50,7 @@
                                 <th scope="col" class="govuk-table__header">Type</th>
                                 <th scope="col" class="govuk-table__header">Registered</th>
                                 <th scope="col" class="govuk-table__header">Next review</th>
-                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Notes</th>
+                                <th scope="col" class="govuk-table__header">Notes</th>
                             </tr>
                             </thead>
                             {%- for risk in activeRisks %}
@@ -77,7 +77,7 @@
                                 <th scope="col" class="govuk-table__header">Type</th>
                                 <th scope="col" class="govuk-table__header">Registered</th>
                                 <th scope="col" class="govuk-table__header">End date</th>
-                                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Notes</th>
+                                <th scope="col" class="govuk-table__header">Notes</th>
                             </tr>
                             </thead>
                             {%- for risk in inactiveRisks %}
