PIC-3149: Update case summary offence heading to be h4 in line with the rest of the page

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -201,26 +201,24 @@
             {% for offence in data.offences %}
                 {{ offences.push(data.offences) | length }}
             {% endfor %}
-            {% if offences | length < 2 %}
+            {% if offences | length == 1 %}
                 {% for offence in data.offences %}
-                    <p class="govuk-body govuk-!-font-weight-bold">{{ offence.offenceTitle }}</p>
+                    <h4 class="govuk-body govuk-!-font-weight-bold">{{ offence.offenceTitle }}</h4>
                     <p class="govuk-body govuk-!-margin-bottom-0">{{ offence.offenceSummary }}</p>
                     <p class="govuk-caption-m govuk-!-margin-top-3">{{ offence.act }}</p>
                 {% endfor %}
-                {% elif offences | length > 1 %}
+            {% elif offences | length > 1 %}
                 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-{{ params.caseId }}">
                     {% for offence in data.offences %}
                         <div class="govuk-accordion__section">
                             <div class="govuk-accordion__section-header">
-                                <h2 class="govuk-accordion__section-heading">
-                                <span class="govuk-accordion__section-button"
-                                      id="accordion-{{ params.caseId }}-heading-{{ loop.index }}">
-                                    <span class="pac-accordion-section-heading">{{ offence.offenceTitle }}</span>
-                                </span>
-                                </h2>
+                                <h4 class="govuk-accordion__section-heading">
+                                    <span class="govuk-accordion__section-button" id="accordion-{{ params.caseId }}-heading-{{ loop.index }}">
+                                        <span class="pac-accordion-section-heading">{{ offence.offenceTitle }}</span>
+                                    </span>
+                                </h4>
                             </div>
-                            <div id="accordion-{{ params.caseId }}-content-{{ loop.index }}"
-                                 class="govuk-accordion__section-content">
+                            <div id="accordion-{{ params.caseId }}-content-{{ loop.index }}" class="govuk-accordion__section-content">
                                 <p class="govuk-body govuk-!-margin-bottom-0">{{ offence.offenceSummary }}</p>
                                 <p class="govuk-caption-m govuk-!-margin-top-3">{{ offence.act }}</p>
                             </div>
