--- a/server/views/components/modal/macro.njk
+++ b/server/views/components/modal/macro.njk
@@ -3,8 +3,9 @@
 
   params: {
     * id: id for the modal,
+    * size: option size class for the modal, will default to modal
     * classList: an array of classes to append to the modal,
-    * titleText: text that will appears as the modal heading,
+    * heading: text that will appears as the modal heading,
       bodyContent: html that will appear in the body of the modal
       form: {
         * method: the desired form method,
