Replace modals with a common component and normalise integration tests to use common step definitions

--- a/server/views/components/modal/macro.njk
+++ b/server/views/components/modal/macro.njk
@@ -3,7 +3,7 @@
 
   params: {
     * id: id for the modal,
-    * size: optional size class for the modal
+      size: optional size class for the modal
     * classList: an array of classes to append to the modal,
     * heading: text that will appears as the modal heading,
       bodyContent: html that will appear in the body of the modal
