--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -143,6 +143,7 @@
   {%  endset %}
   {{ modal({
     id: "assign-outcome-modal",
+    size: "modal-lg",
     classList: ["assign-outcome"],
     heading: "Do you want to result this case now?",
     bodyContent: bodyContent,
