--- a/server/views/case-summary/case-summary-record.njk
+++ b/server/views/case-summary/case-summary-record.njk
@@ -1,5 +1,8 @@
 {% extends "partials/case-details.njk" %}
 
+{% from "./partials/orders-active/macro.njk" import activeOrdersBlock %}
+{% from "./partials/orders-previous/macro.njk" import previousOrdersBlock %}
+
 {%- set moment = params.moment -%}
 {%- set communityData = data.communityData -%}
 {%- set psrRequestedConvictions = data.psrRequestedConvictions -%}
@@ -107,108 +110,17 @@
             {% endif %}
 
             {% if activeOrders | length %}
-                <h2 class="govuk-heading-m">Current orders <span
-                            class="govuk-caption-l govuk-!-font-weight-bold govuk-!-display-inline-block">({{ activeOrders | length }})</span>
-                </h2>
-                {%- for order in activeOrders %}
-                    <p class="govuk-body govuk-!-margin-bottom-0">
-                        <a href="record/{{ order.convictionId }}"
-                           class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description + (' (' + order.sentence.length + ' ' + order.sentence.lengthUnits + ')' if order.sentence.length) }}</a>
-                        {% if order.inBreach %}<span
-                                class="moj-badge moj-badge--black pac-badge govuk-!-margin-left-1">Breach</span>{% endif %}
-                    </p>
-                    <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">{{ order.offences[0].description }}</p>
-                    <p class="govuk-hint govuk-!-margin-top-1 govuk-!-margin-bottom-4">Started
-                        on {{ moment(order.sentence.startDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
-
-                    {% if order.requirements and order.requirements | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Requirements</h3>
-
-                        <ul class="govuk-list govuk-list--bullet qa-current-requirements-{{ loop.index0 }}">
-                            {%- for requirement in order.requirements %}
-                                {% set category = requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description %}
-                                {% set subCategory = requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description %}
-                                <li>
-                                    {{ category  | replace("-", "–") }} {{ " – " + subCategory if category !== subCategory }}
-                                    {{ ' – ' + requirement.length + ' ' + requirement.lengthUnit if requirement.length > 0 }}
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-
-                    {% if order.custodialType.description === "In Custody" %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Status</h3>
-                        <p class="govuk-body">In custody</p>
-                    {% endif %}
-
-                    {% if order.licenceConditions and order.licenceConditions | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Status</h3>
-                        <p class="govuk-body">On licence</p>
-
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Licence conditions</h3>
-                        <ul class="govuk-list govuk-list--bullet qa-current-licence-conditions-{{ loop.index0 }}">
-                            {%- for licenceCondition in order.licenceConditions %}
-                                <li>{{ licenceCondition.description }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-
-                    {% if order.pssRequirements and order.pssRequirements | length %}
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Status</h3>
-                        <p class="govuk-body">On post-sentence supervision (PSS)</p>
-
-                        <h3 class="govuk-heading-s govuk-!-margin-bottom-2">PSS requirements</h3>
-                        <ul class="govuk-list govuk-list--bullet qa-current-pss-requirements-{{ loop.index0 }}">
-                            {%- for pssRequirement in order.pssRequirements %}
-                                <li>{{ pssRequirement.description  + (' – ' + pssRequirement.subTypeDescription  | replace("-", "–") if pssRequirement.subTypeDescription | length) }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-
-                    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"/>
-
-                {% endfor -%}
+                {{ activeOrdersBlock(activeOrders, moment, displayDateFormat) }}
             {% endif %}
 
-    {% if previousOrders | length %}
-      {% if params.showAllPreviousOrders === params.hearingId %}
-        {% set limitPreviousOrders = previousOrders | length %}
-      {% else %}
-        {% set limitPreviousOrders = 5 %}
-      {% endif %}
-
-                <form name="previousOrders" id="previousOrders" method="post">
-                    <h2 class="govuk-heading-m{% if activeOrders | length and previousOrders | length %} govuk-!-margin-top-8{% endif %}">
-                        Previous orders <span
-                                class="govuk-caption-l govuk-!-font-weight-bold govuk-!-display-inline-block">({{ previousOrders | length }})</span>
-                    </h2>
-                    <table class="govuk-table govuk-!-margin-bottom-3" aria-label="Previous orders">
-                        <tbody class="govuk-table__body">
-                        {%- for order in previousOrders | limit(limitPreviousOrders) %}
-                            <tr class="govuk-table__row">
-                                <td class="govuk-table__cell govuk-!-width-two-thirds">
-                                    <p class="govuk-body govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}"><a
-                                                href="record/{{ order.convictionId }}"
-                                                class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description + (' (' + order.sentence.length + ' ' + order.sentence.lengthUnits + ')' if order.sentence.length ) }}</a>
-                                    </p>
-                                    <p class="govuk-body govuk-!-margin-top-0 govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}-offence">{{ order.offences[0].description }}</p>
-                                </td>
-                                <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third pac-!-valign-bottom">
-                                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-termination-date qa-previous-order-{{ loop.index }}-end-date">
-                                        Ended
-                                        on {{ moment(order.sentence.terminationDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
-                                </td>
-                            </tr>
-                        {% endfor -%}
-                        </tbody>
-                    </table>
-                    {% if previousOrders | length > limitPreviousOrders %}
-                        <button type="submit" class="govuk-button action-button govuk-button--secondary">Show all previous orders
-                        </button>
-                    {% endif %}
-                </form>
+            {% if previousOrders | length %}
+                {% if params.showAllPreviousOrders === params.hearingId %}
+                    {% set limitPreviousOrders = previousOrders | length %}
+                {% else %}
+                    {% set limitPreviousOrders = 5 %}
+                {% endif %}
+                {{ previousOrdersBlock(previousOrders, limitPreviousOrders, moment, displayDateFormat) }}
             {% endif %}
-
         </div>
 
         <div class="govuk-grid-column-one-third govuk-!-padding-left-9 govuk-!-padding-top-9">
