--- a/server/views/case-summary/case-summary.njk
+++ b/server/views/case-summary/case-summary.njk
@@ -48,6 +48,19 @@
         }) }}
     {% endif %}
 
+    {% if session.addHearingNoteSuccess %}
+        {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+        {% set html %}
+            <p class="govuk-notification-banner__heading">
+                You successfully added a note
+            </p>
+        {% endset %}
+        {{ govukNotificationBanner({
+            html: html,
+            type: 'success'
+        }) }}
+    {% endif %}
+
     {% if session.addHearingOutcomeSuccess %}
         {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
         {% set html %}
