--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -15,6 +15,20 @@
                 classes: 'case-comments-delete-success-notification'
             }) }}
         {% endif %}
+
+        {% if session.addCommentSuccess === data.caseId %}
+            {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+            {% set html %}
+                <span class="govuk-body-l">
+                        You successfully added a comment
+                    </span>
+            {% endset %}
+            {{ govukNotificationBanner({
+                html: html,
+                type: 'success'
+            }) }}
+        {% endif %}
+
         <div class="govuk-form-group govuk-!-margin-bottom-7">
             <div id="comments-hint">
                 <p id="comments-hint-p1" class="govuk-body">
