fix court code not being passed to match defendant

--- a/server/views/match-defendant.njk
+++ b/server/views/match-defendant.njk
@@ -234,7 +234,7 @@
 
     <button type="submit" class="govuk-button action-button">Confirm record</button>
 
-    <p class="govuk-body"><a href="/{{ session.courtCode }}/match/cancel" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+    <p class="govuk-body"><a href="/{{ params.courtCode }}/match/cancel" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
 
   </form>
 
